# Palleon

./: .gitignore  License.txt
build_android/: AndroidManifest.xml  build_debug.sh
build_android/jni/: Android.mk  ExternalDependencies.mk.template
build_html5/: CMakeLists.txt  build.sh
build_ios/: Athena-Prefix.pch  GeneralSettings.xcconfig  Palleon-Prefix.pch
build_ios/Athena/: Athena-Prefix.pch
build_ios/Athena.xcodeproj/: project.pbxproj
build_ios/Palleon.xcodeproj/: project.pbxproj
build_iphone/Athena.xcodeproj/: project.pbxproj
build_unix/: CMakeLists.txt
build_win32/: Athena.sln  Athena.vcproj  Athena.vcxproj  Athena.vcxproj.filters  ExternalDependencies.userprops.template  GeneralSettings.props  GeneralSettings_EmbedProxy.props  Palleon.sln  Palleon.vcxproj  Palleon.vcxproj.filters  PalleonEmbedClient.vcxproj  PalleonEmbedClient.vcxproj.filters  PalleonEmbedProxy.def  PalleonEmbedProxy.manifest  PalleonEmbedProxy.vcxproj  PalleonEmbedProxy.vcxproj.filters  Pch.h  packages.config
include/: AthenaEngine.h  PalleonEngine.h
include/athena/: AnimatedSprite.h  AnimationController.h  AnimationCurve.h  Application.h  AudioClip.h  AudioManager.h  Box2.h  Button.h  ButtonBase.h  Camera.h  Color.h  ConeMesh.h  CubeMesh.h  CubeRenderTarget.h  Emitter.h  EmitterDescriptor.h  EmitterModifier.h  FontDescriptor.h  Frustum.h  GraphicDevice.h  IAnimation.h  ILayoutable.h  InputManager.h  Label.h  Material.h  MathDef.h  MathOps.h  Matrix4.h  Mesh.h  MeshProvider.h  NinePatch.h  NinePatchButton.h  NinePatchDescriptor.h  Package.h  ParseUtils.h  Plane.h  PvrImage.h  Quaternion.h  RenderTarget.h  ResourceManager.h  (+12 more)
include/palleon/: AnimationController.h  AnimationCurve.h  Application.h  AudioClip.h  AudioManager.h  AxisMesh.h  Box2.h  ButtonBase.h  Camera.h  CatmullRom.h  Color.h  ConeMesh.h  ConfigManager.h  CubeMesh.h  CubeRenderTarget.h  Effect.h  EffectParameter.h  EffectParameterBag.h  EffectProvider.h  EmbedManager.h  EmbedRemoteCall.h  Emitter.h  EmitterModifier.h  Frustum.h  GraphicDevice.h  IAnimation.h  ILayoutable.h  InputManager.h  Label.h  LayoutNode.h  Log.h  Material.h  MathOps.h  Matrix4.h  Mesh.h  MeshProvider.h  NinePatch.h  NinePatchButton.h  ParseUtils.h  Plane.h  (+19 more)
samples/: Athena.Samples.Common.props  Palleon.Samples.Common.Debug.xcconfig  Palleon.Samples.Common.props  Palleon.Samples.Common32.props  Palleon.Samples.Common64.props  Palleon.Samples.NuGet.props
samples/ShadowMapping/build_unix/: CMakeLists.txt
src/: AnimatedSprite.cpp  AnimationController.cpp  AudioClip.cpp  AudioManager.cpp  AxisMesh.cpp  Box2.cpp  Button.cpp  ButtonBase.cpp  Camera.cpp  CatmullRom.cpp  ConeMesh.cpp  ConfigManager.cpp  CubeMesh.cpp  CubeRenderTarget.cpp  EffectParameter.cpp  EffectParameterBag.cpp  EmbedManager.cpp  EmbedRemoteCall.cpp  Emitter.cpp  EmitterDescriptor.cpp  EmitterModifier.cpp  FontDescriptor.cpp  Frustum.cpp  GraphicDevice.cpp  InputManager.cpp  Label.cpp  LayoutNode.cpp  Log.cpp  Material.cpp  Mesh.cpp  NinePatch.cpp  NinePatchButton.cpp  NinePatchDescriptor.cpp  Package.cpp  ParseUtils.cpp  RenderTarget.cpp  ResourceManager.cpp  RumbleAnimation.cpp  Scene.cpp  SceneNode.cpp  (+9 more)
src/android/: AndroidActivity.cpp  AndroidAssetStream.cpp  AndroidGlEsGraphicDevice.cpp  AndroidGraphicDevice.cpp  AndroidLog.cpp  AndroidResourceManager.cpp  AndroidVulkanGraphicDevice.cpp
src/gles/: GlEsEffect.cpp  GlEsGenericEffect.cpp  GlEsGraphicDevice.cpp  GlEsRenderTarget.cpp  GlEsShaderGenerator.cpp  GlEsShadowMapEffect.cpp  GlEsTexture.cpp  GlEsUberEffect.cpp  GlEsUberEffectGenerator.cpp  GlEsUberEffectProvider.cpp  GlEsVertexBuffer.cpp
src/graphics/: AxisMesh.cpp  Camera.cpp  ConeMesh.cpp  CubeMesh.cpp  CubeRenderTarget.cpp  EffectParameter.cpp  EffectParameterBag.cpp  Emitter.cpp  EmitterModifier.cpp  GenericEffect.cpp  GraphicDevice.cpp  Label.cpp  Material.cpp  Mesh.cpp  NinePatch.cpp  RenderTarget.cpp  Scene.cpp  SceneNode.cpp  ShaderBuilder.cpp  SphereMesh.cpp  Sprite.cpp  Texture.cpp  TextureLoader.cpp  VertexBuffer.cpp  Viewport.cpp
src/html5/: Html5Canvas.cpp  Html5GraphicDevice.cpp  Html5Main.cpp  Html5ResourceManager.cpp
src/ios/: EAGLView.mm  IosAppDelegate.mm  IosAudioClip.cpp  IosAudioManager.cpp  IosEffect.cpp  IosEffectGenerator.cpp  IosGraphicDevice.cpp  IosLog.cpp  IosResourceManager.cpp  IosShadowMapEffect.cpp  IosTexture.cpp  IosUberEffect.cpp  IosUberEffectGenerator.cpp  IosUberEffectProvider.cpp  IosVertexBuffer.cpp  IosViewController.mm  MetalEffect.cpp  MetalGraphicDevice.cpp  MetalShadowMapEffect.cpp  MetalShadowMapEffectGenerator.cpp  MetalShadowMapEffectProvider.cpp  MetalTexture.cpp  MetalUberEffect.cpp  MetalUberEffectGenerator.cpp  MetalUberEffectProvider.cpp  MetalVertexBuffer.cpp  MetalView.mm
src/iphone/: EAGLView.mm  IphoneAppDelegate.mm  IphoneAudioClip.cpp  IphoneAudioManager.cpp  IphoneEffectGenerator.cpp  IphoneGraphicDevice.cpp  IphoneResourceManager.cpp  IphoneResourceManager.mm  IphoneTexture.mm  IphoneVertexBuffer.cpp  IphoneViewController.mm  ResourceManager.mm
src/resources/: DdsImage.cpp  EmitterDescriptor.cpp  FontDescriptor.cpp  NinePatchDescriptor.cpp  Package.cpp  ResourceManager.cpp  SceneDescriptor.cpp  TextureConverters.cpp  TextureResource.cpp
src/unix/: UnixApplicationWindow.cpp  UnixLog.cpp  UnixMain.cpp  UnixResourceManager.cpp  UnixVulkanGraphicDevice.cpp
src/vulkan/: VulkanEffect.cpp  VulkanGraphicDevice.cpp  VulkanShadowMapEffect.cpp  VulkanShadowMapRenderer.cpp  VulkanTexture.cpp  VulkanUberEffect.cpp  VulkanUberEffectGenerator.cpp  VulkanUberEffectProvider.cpp  VulkanUtils.cpp  VulkanVertexBuffer.cpp
src/win32/: Dx11ContextManager.cpp  Dx11Effect.cpp  Dx11EffectGenerator.cpp  Dx11GenericEffect.cpp  Dx11GraphicDevice.cpp  Dx11RenderTarget.cpp  Dx11ShaderGenerator.cpp  Dx11ShadowMapEffect.cpp  Dx11SharedGraphicContext.cpp  Dx11Texture.cpp  Dx11UberEffect.cpp  Dx11UberEffectGenerator.cpp  Dx11UberEffectProvider.cpp  Dx11VertexBuffer.cpp  Dx9ApplicationWindow.cpp  Dx9CubeRenderTarget.cpp  Dx9EffectGenerator.cpp  Dx9GraphicDevice.cpp  Dx9RenderTarget.cpp  Dx9Texture.cpp  Dx9VertexBuffer.cpp  (+11 more)
(+307 files in other folders)
